# neoguvc

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  run.sh
data/: CMakeLists.txt  guvcview.1  guvcview.desktop.in  guvcview.in  neoguvc.1  neoguvc.appdata.xml.in  neoguvc.desktop.in  neoguvc.in
debian/: changelog  control  copyright  install  rules  watch
debian/patches/: series
debian/upstream/: metadata
guvcview/: CMakeLists.txt  config.c  config.h  core_io.c  gui.c  gui.h  gui_gtk3_audioctrls.c  gui_gtk3_videoctrls.c  guvcview.c  options.c  video_capture.c
gview_audio/: CMakeLists.txt  audio.c  audio.h  audio_fx.c  audio_portaudio.c  audio_portaudio.h  audio_pulseaudio.c  audio_pulseaudio.h  core_time.c  core_time.h  libgviewaudio.pc.in  neoguvcaudio.h
gview_encoder/: CMakeLists.txt  audio_codecs.c  avi.c  encoder.c  encoder.h  file_io.c  file_io.h  libav_encoder.c  libgviewencoder.pc.in  matroska.c  muxer.c  neoguvcencoder.h  packet.c  packet.h  stream_io.c  video_codecs.c
gview_render/: CMakeLists.txt  gviewrender.h  libgviewrender.pc.in  render.c  render_fx.c  render_osd_crosshair.c  render_osd_vu_meter.c  render_sdl2.c  render_sfml.cpp
gview_v4l2core/: CMakeLists.txt  colorspaces.c  colorspaces.h  control_profile.c  control_profile.h  core_time.c  core_time.h  dct.c  dct.h  frame_decoder.c  frame_decoder.h  jpeg_decoder.c  jpeg_decoder.h  libgviewv4l2core.pc.in  neoguvc_v4l2core.h  save_image.c  save_image.h  save_image_bmp.c  save_image_jpeg.c  save_image_png.c  soft_autofocus.c  soft_autofocus.h  uvc_h264.c  uvc_h264.h  v4l2_controls.c  v4l2_controls.h  v4l2_core.c  v4l2_core.h  v4l2_devices.c  v4l2_devices.h  v4l2_formats.c  v4l2_formats.h  v4l2_xu_ctrls.c  v4l2_xu_ctrls.h
includes/: neoguvc.h
po/: CMakeLists.txt  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  guvcview.pot  he.po  hr.po  it.po  ja.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
po/gview_v4l2core/: CMakeLists.txt  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  gview_v4l2core.pot  he.po  hr.po  it.po  ja.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
ui/: AudioControls.cpp  AudioControls.hpp  CMakeLists.txt  CameraWindow.cpp  CameraWindow.hpp  ControlsBase.cpp  ControlsBase.hpp  ImageControls.cpp  ImageControls.hpp  ImageControlsWindow.cpp  ImageControlsWindow.hpp  MainWindow.cpp  MainWindow.hpp  VideoControls.cpp  VideoControls.hpp  main.cpp  style.css
ui/resources/: style.css
